--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -3,12 +3,12 @@ name: Deploy Plugin
 on:
   push:
     branches:
-      - main
+      - master
     tags:
       - '*'
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   test:
