Add deploy code to WP repo.

--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -67,8 +67,6 @@ jobs:
       - name: Check JS & CSS syntax
         run: npm run lint
 
-
-
   release:
     name: Deploy WordPress.org
     needs: [ test, assets ]
@@ -91,11 +89,14 @@ jobs:
       - name: Build Plugin
         run: bash bin/build.sh ${{ github.ref }}
 
-      - name: Clean package.
-        run: bash bin/clean.sh
-
-      - name: Create Zip
-        run: zip -r ${{ github.event.repository.name }}.zip ./
+      - name: Deploy to WordPress Directory
+        id: deploy
+        uses: 10up/action-wordpress-plugin-deploy@stable
+        with:
+          generate-zip: true
+        env:
+          SVN_USERNAME: ${{ secrets.WP_ORG_USERNAME_TAROSKY }}
+          SVN_PASSWORD: ${{ secrets.WP_ORG_PASSWORD_TAROSKY }}
 
       - name: Create Release
         id: create_release
