--- a/.distignore
+++ b/.distignore
@@ -7,7 +7,7 @@
 .gitignore
 .node-version
 .stylelintrc.json
-.wordpress_org
+.wordpress-org
 .wp-env.json
 node_modules
 composer.lock
@@ -22,3 +22,4 @@ bin
 tests
 taro-taxonomy-blocks.php.bak
 readme.txt.bak
+assets/icon.ai
