--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -11,83 +11,51 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      matrix:
-        operating-system: [ ubuntu-18.04 ]  # OS. ubuntu-18.04 is also available.
-        php: [ '5.6', '7.2', '7.4' ] # PHP versions to check.
-        wp: [ 'latest', '5.4' ]      # WordPress version to check.
-    services:
-      mysql:
-        image: mysql:5.7
-        options: --health-cmd "mysqladmin ping --host 127.0.0.1 --port 3306" --health-interval 20s --health-timeout 10s --health-retries 10
-        ports:
-          - 3306/tcp
-        env:
-          MYSQL_ROOT_PASSWORD: root
-    name: WordPress ${{ matrix.wp }} in PHP ${{ matrix.php }} UnitTest
-    steps:
-      - uses: actions/checkout@master
-
-      - name: Setup PHP
-        uses: nanasess/setup-php@master
-        with:
-          php-version: ${{ matrix.php }}
-
-      - name: Validate composer.json and composer.lock
-        run: composer validate
-
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
-
-      - name: Start MySQL
-        run: sudo systemctl start mysql
-
-      - name: Install WordPress
-        run: bash bin/install-wp-tests.sh wordpress root root 127.0.0.1:3306 ${{ matrix.wp }}
-
-      - name: Check PHP syntax
-        run: composer test
+  phpcs:
+    uses: tarosky/workflows/.github/workflows/phpcs.yml@main
+    with:
+      version: 8.0
 
   assets:
-    name: Assets Test
-    runs-on: ubuntu-18.04
+    uses: tarosky/workflows/.github/workflows/npm.yml@main
+    with:
+      node_version: 16
+      package: package
+
+  status-check:
+    needs: [ phpcs, assets ]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-
-      - name: Install Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12'
-
-      - name: Install NPM Packages
-        run: npm install
-
-      - name: Check JS & CSS syntax
-        run: npm run lint
+      - name: Status Check
+        run: echo "All Green!"
 
   release:
     name: Deploy WordPress.org
-    needs: [ test, assets ]
+    needs: [ status-check ]
     if: contains(github.ref, 'tags/')
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: nanasess/setup-php@master
-        with:
-          php-version: 5.6
-
       - name: Install Node
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '16'
 
       - name: Build Plugin
-        run: bash bin/build.sh ${{ github.ref }}
+        run: |
+          npm install
+          npm run package
+
+      - name: Generate readme.txt
+        uses: tarosky/workflows/actions/wp-readme@main
+
+      - name: Versioning
+        uses: tarosky/workflows/actions/versioning@main
+        with:
+          version: ${{ github.ref }}
+          files: taro-taxonomy-blocks.php,readme.txt
 
       - name: Deploy to WordPress Directory
         id: deploy
