--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,10 @@
 	"minimum-stability": "stable",
 	"license": "GPL-3.0-or-later",
 	"scripts": {
-		"test": [
-			"phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
+		"lint": [
 			"phpcs --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
 		],
 		"fix": [
-			"phpcs --config-set installed_paths $(pwd)/vendor/wp-coding-standards/wpcs",
 			"phpcbf --standard=phpcs.ruleset.xml $(find ./ -name '*.php')"
 		]
 	},
@@ -20,10 +18,17 @@
 		}
 	],
 	"require": {
-		"php": "^5.6|^7.0"
+		"php": ">=7.2"
 	},
 	"require-dev": {
 		"squizlabs/php_codesniffer": "^3.0",
-		"wp-coding-standards/wpcs": "^2.0"
+		"wp-coding-standards/wpcs": "^2.0",
+		"phpcompatibility/php-compatibility": "^9.3",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0"
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
