--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -2,8 +2,6 @@ name: Deploy Plugin
 
 on:
   push:
-    branches:
-      - master
     tags:
       - '*'
   pull_request:
@@ -12,22 +10,27 @@ on:
 
 jobs:
   phpcs:
+    name: Syntax Check
     uses: tarosky/workflows/.github/workflows/phpcs.yml@main
     with:
       version: 8.0
 
   assets:
+    name: Check JS & CSS syntax
     uses: tarosky/workflows/.github/workflows/npm.yml@main
     with:
       node_version: 16
       package: package
 
   status-check:
-    needs: [ phpcs, assets ]
+    name: Status Check
     runs-on: ubuntu-latest
+    needs: [ phpcs, assets ]
+    if: always()
     steps:
-      - name: Status Check
-        run: echo "All Green!"
+    - uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
 
   release:
     name: Deploy WordPress.org
