--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -38,6 +38,10 @@ jobs:
     if: contains(github.ref, 'tags/')
     runs-on: ubuntu-latest
     steps:
+
+      - name: Install SVN
+        run: sudo apt-get install -y subversion
+
       - name: Checkout code
         uses: actions/checkout@v2
 
